--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
