--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "google-map-react": "^2.2.1",
+    "hafas-client": "^6.1.1",
     "interrail": "^3.0.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.54.0",
+    "@types/hafas-client": "^6.1.0",
     "@types/luxon": "^3.3.2"
   }
 }
