--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bulma": "^0.9.4",
+    "bulma-calendar": "^6.1.19",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "google-map-react": "^2.2.1",
