yo what the hell

--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -26,10 +26,12 @@
     "google-map-react": "^2.2.1",
     "hafas-client": "^6.1.1",
     "interrail": "^3.0.4",
+    "leaflet": "^1.9.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "sass": "^1.66.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
