--- a/juliuste-api/package.json
+++ b/juliuste-api/package.json
@@ -25,27 +25,28 @@
 		"db-hafas": "^4.0.1",
 		"express": "^4.18.2",
 		"express-robots-txt": "^1.0.0",
-		"i18n-iso-countries": "^7.7.0",
-		"is-uic-location-code": "0.0.1",
-		"lodash": "^4.17.21",
-		"moment-timezone": "^0.5.43",
-		"node-fetch": "^3.3.2",
-		"p-queue": "^7.4.1",
-		"query-string": "^7.1.3",
-		"redis": "^3.1.2",
-		"trainline-stations": "^2.0.1",
-		"uic-codes": "^0.3.0",
 		"fetch-ponyfill": "^7.1.0",
 		"hafas-client": "^6.1.1",
 		"hast-util-to-html": "^8.0.4",
 		"hastscript": "^7.2.0",
 		"helmet": "^4.6.0",
 		"horsey": "^4.2.2",
+		"i18n-iso-countries": "^7.7.0",
+		"is-uic-location-code": "0.0.1",
 		"js-beautify": "^1.14.9",
+		"lodash": "^4.17.21",
 		"moment-duration-format": "^2.3.2",
+		"moment-timezone": "^0.5.43",
 		"ms": "^2.1.3",
+		"node-fetch": "^3.3.2",
+		"p-queue": "^7.4.1",
 		"p-retry": "^4.6.2",
 		"p-timeout": "^5.1.0",
+		"query-string": "^7.1.3",
+		"redis": "^3.1.2",
+		"strftime": "^0.10.2",
+		"trainline-stations": "^2.0.1",
+		"uic-codes": "^0.3.0",
 		"unist-builder": "^3.0.1"
 	},
 	"devDependencies": {
