--- a/is-eurail-cheaper/tsconfig.json
+++ b/is-eurail-cheaper/tsconfig.json
@@ -20,9 +20,10 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "downlevelIteration": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
-  "downlevelIteration": true
 }
