--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -24,7 +24,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "google-map-react": "^2.2.1",
-    "hafas-client": "@latest",
+    "hafas-client": "latest",
     "interrail": "^3.0.4",
     "leaflet": "^1.9.4",
     "next": "13.4.19",
@@ -40,7 +40,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "db-clean-station-name": "^1.2.0",
-    "db-hafas": "@latest",
+    "db-hafas": "latest",
     "express": "^4.18.2",
     "express-robots-txt": "^1.0.0",
     "fetch-ponyfill": "^7.1.0",
