remove unnecessary packages

--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -9,63 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@creativebulma/bulma-divider": "^1.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "apicache": "^1.6.3",
     "autoprefixer": "10.4.15",
-    "boolean": "^3.2.0",
     "bulma": "^0.9.4",
-    "bulma-calendar": "^6.1.19",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "db-clean-station-name": "^1.2.0",
     "db-hafas": "latest",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "express": "^4.18.2",
-    "express-robots-txt": "^1.0.0",
-    "fetch-ponyfill": "^7.1.0",
     "google-map-react": "^2.2.1",
     "hafas-client": "latest",
-    "hast-util-to-html": "^8.0.4",
-    "hastscript": "^7.2.0",
-    "helmet": "^4.6.0",
-    "horsey": "^4.2.2",
     "i18n-iso-countries": "^7.7.0",
-    "interrail": "^3.0.4",
     "is-uic-location-code": "0.0.1",
-    "js-beautify": "^1.14.9",
-    "leaflet": "^1.9.4",
-    "lodash": "^4.17.21",
-    "moment-duration-format": "^2.3.2",
-    "moment-timezone": "^0.5.43",
-    "ms": "^2.1.3",
     "next": "13.4.19",
     "node-fetch": "^3.3.2",
-    "p-queue": "^7.4.1",
-    "p-retry": "^4.6.2",
-    "p-timeout": "^5.1.0",
     "postcss": "8.4.29",
-    "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
     "redis": "^3.1.2",
     "sass": "^1.66.1",
     "strftime": "^0.10.2",
     "tailwindcss": "3.3.3",
     "trainline-stations": "^2.0.1",
     "typescript": "5.2.2",
-    "uic-codes": "^0.3.0",
-    "unist-builder": "^3.0.1"
+    "uic-codes": "^0.3.0"
   },
   "devDependencies": {
     "@types/google.maps": "^3.54.0",
