--- a/is-eurail-cheaper/package.json
+++ b/is-eurail-cheaper/package.json
@@ -20,6 +20,7 @@
     "bulma": "^0.9.4",
     "db-clean-station-name": "^1.2.0",
     "db-hafas": "latest",
+    "db-vendo-client": "^6.3.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "google-map-react": "^2.2.1",
